# timetable-generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  vercel.json
api/: index.py
app/: __init__.py  naub_timetable.py
app/models/: __init__.py
app/routes/: __init__.py  auth.py  main.py
app/services/: exports.py  firebase.py  scheduler.py  supabase.py
app/static/css/: styles.css
app/templates/: dashboard.html
app/templates/auth/: forbidden.html  login.html  users.html
app/templates/courses/: index.html
app/templates/layouts/: base.html
app/templates/lecturers/: index.html
app/templates/rooms/: index.html
app/templates/timeslots/: index.html
app/templates/timetables/: index.html  show.html
docs/: software-requirements.md  supabase-schema.sql
tests/: test_auth.py  test_courses.py  test_exports.py  test_scheduler.py
