[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-timetable-generator"
version = "0.1.0"
description = "Flask-based academic timetable generator using constraint-based scheduling."
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "Werkzeug>=3.0,<4.0",
    "ReportLab>=4.0,<5.0",
    "gunicorn>=21.2,<23.0",
    "supabase>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
